--- a/pokemon-app/package.json
+++ b/pokemon-app/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@School-Of-Tech-Futures-UK/mariola-github-actions-demo",
-    "version": "0.0.2",
-    "description": "Neil Jennings Academy (NJA) Simple pokemon app for demos and use in github",
+    "version": "0.0.1",
+    "description": "Simple pokemon app for demos and use in github",
     "author": "InfinityWorks",
     "license": "MIT",
     "main": "populatePokedex.js",
@@ -16,7 +16,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/infinityworks/academy-github-actions-demo.git"
+        "url": "https://github.com/School-Of-Tech-Futures-UK/mariola-github-actions-demo.git"
     },
     "dependencies": {
         "express": "^4.17.1",
